--- a/templates/partials/profile_menu.html
+++ b/templates/partials/profile_menu.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="m-card-user__details">
 																								<span class="m-card-user__name m--font-weight-500">
-																									{{ user.first_name }}
+																									{{ user.first_name }} {{ user.last_name }}
 																								</span>
                         <a href="" class="m-card-user__email m--font-weight-300 m-link">
                             {{ user.email }}
