--- a/templates/base/metronic/content.html
+++ b/templates/base/metronic/content.html
@@ -55,27 +55,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         <h3 class="m-subheader__title {% if breadcrumbs %} m-subheader__title--separator {% endif %}">
                             {{ subheader_title }}
                         </h3>
-                        {% if breadcrumbs %}
-                            <ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
-                                <li class="m-nav__item m-nav__item--home">
-                                    <a href="#" class="m-nav__link m-nav__link--icon">
-                                        <i class="m-nav__link-icon la la-home"></i>
-                                    </a>
-                                </li>
-                                {% for item in breadcrumbs %}
-                                    <li class="m-nav__separator">
-                                        -
-                                    </li>
-                                    <li class="m-nav__item">
-                                        <a href="{% if item.url %} {% url  item.url %} {% else %}javascript:;{% endif %}"
-                                           class="m-nav__link">
-                                            <span class="m-nav__link-text">{{ item.text }}</span>
-                                        </a>
-                                    </li>
-                                {% endfor %}
-                            </ul>
-
-                        {% endif %}
+                        {% include "partials/breadcrumbs.html" %}
                     </div>
                     <div>
                         {% block subheader_tools %}
