--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -8,21 +8,19 @@
 
 
 {% block subheader_tools %}
-    <span class="m-subheader__daterange"
-          id="m_dashboard_daterangepicker">
-																	<span class="m-subheader__daterange-label">
-																		<span class="m-subheader__daterange-title"></span>
-																		<span class="m-subheader__daterange-date m--font-brand"></span>
-																	</span>
-																	<a href="#"
-                                                                       class="btn btn-sm btn-brand m-btn m-btn--icon m-btn--icon-only m-btn--custom m-btn--pill">
-																		<i class="la la-angle-down"></i>
-																	</a>
-																</span>
+    <span class="m-subheader__daterange m--hide" id="m_dashboard_daterangepicker">
+        <span class="m-subheader__daterange-label">
+            <span class="m-subheader__daterange-title"></span>
+            <span class="m-subheader__daterange-date m--font-brand"></span>
+        </span>
+        <a href="#" class="btn btn-sm btn-brand m-btn m-btn--icon m-btn--icon-only m-btn--custom m-btn--pill">
+            <i class="la la-angle-down"></i>
+        </a>
+    </span>
 {% endblock %}
 
 {% block content %}
-    <h1> Welcome to Home {{ username }}</h1>
+    {% include "partials/dashboard.html" %}
 {% endblock %}
 
 
