--- a/templates/partials/profile_menu.html
+++ b/templates/partials/profile_menu.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load i18n static %}
 <li class="m-nav__item m-topbar__user-profile m-topbar__user-profile--img  m-dropdown m-dropdown--medium m-dropdown--arrow m-dropdown--header-bg-fill m-dropdown--align-right m-dropdown--mobile-full-width m-dropdown--skin-light"
     m-dropdown-toggle="click">
     <a href="#" class="m-nav__link m-dropdown__toggle">
@@ -47,15 +47,16 @@
             <div class="m-dropdown__body">
                 <div class="m-dropdown__content">
                     <ul class="m-nav m-nav--skin-light">
-                        <li class="m-nav__section m--hide">
+                        {% if show_profile_menu_sections %}
+                            <li class="m-nav__section m--hide">
 																									<span class="m-nav__section-text">
 																										Section
 																									</span>
-                        </li>
-                        <li class="m-nav__item">
-                            <a href="header/profile.html" class="m-nav__link">
-                                <i class="m-nav__link-icon flaticon-profile-1"></i>
-                                <span class="m-nav__link-title">
+                            </li>
+                            <li class="m-nav__item">
+                                <a href="header/profile.html" class="m-nav__link">
+                                    <i class="m-nav__link-icon flaticon-profile-1"></i>
+                                    <span class="m-nav__link-title">
 																											<span class="m-nav__link-wrap">
 																												<span class="m-nav__link-text">
 																													My Profile
@@ -67,44 +68,53 @@
 																												</span>
 																											</span>
 																										</span>
-                            </a>
-                        </li>
-                        <li class="m-nav__item">
-                            <a href="header/profile.html" class="m-nav__link">
-                                <i class="m-nav__link-icon flaticon-share"></i>
-                                <span class="m-nav__link-text">
+                                </a>
+                            </li>
+                            <li class="m-nav__item">
+                                <a href="header/profile.html" class="m-nav__link">
+                                    <i class="m-nav__link-icon flaticon-share"></i>
+                                    <span class="m-nav__link-text">
 																											Activity
 																										</span>
-                            </a>
-                        </li>
-                        <li class="m-nav__item">
-                            <a href="header/profile.html" class="m-nav__link">
-                                <i class="m-nav__link-icon flaticon-chat-1"></i>
-                                <span class="m-nav__link-text">
+                                </a>
+                            </li>
+                            <li class="m-nav__item">
+                                <a href="header/profile.html" class="m-nav__link">
+                                    <i class="m-nav__link-icon flaticon-chat-1"></i>
+                                    <span class="m-nav__link-text">
 																											Messages
 																										</span>
-                            </a>
-                        </li>
-                        <li class="m-nav__separator m-nav__separator--fit"></li>
-                        <li class="m-nav__item">
-                            <a href="header/profile.html" class="m-nav__link">
-                                <i class="m-nav__link-icon flaticon-info"></i>
-                                <span class="m-nav__link-text">
+                                </a>
+                            </li>
+                            <li class="m-nav__separator m-nav__separator--fit"></li>
+                            <li class="m-nav__item">
+                                <a href="header/profile.html" class="m-nav__link">
+                                    <i class="m-nav__link-icon flaticon-info"></i>
+                                    <span class="m-nav__link-text">
 																											FAQ
 																										</span>
-                            </a>
-                        </li>
-                        <li class="m-nav__item">
-                            <a href="header/profile.html" class="m-nav__link">
-                                <i class="m-nav__link-icon flaticon-lifebuoy"></i>
-                                <span class="m-nav__link-text">
+                                </a>
+                            </li>
+                            <li class="m-nav__item">
+                                <a href="header/profile.html" class="m-nav__link">
+                                    <i class="m-nav__link-icon flaticon-lifebuoy"></i>
+                                    <span class="m-nav__link-text">
 																											Support
+																										</span>
+                                </a>
+                            </li>
+                        {% endif %}
+                        <li class="m-nav__item">
+                            <a href="{% url 'admin:index' %}" class="m-nav__link">
+                                <i class="m-nav__link-icon flaticon-profile"></i>
+                                <span class="m-nav__link-text">
+																											{% trans 'Admin' %}
 																										</span>
                             </a>
                         </li>
                         <li class="m-nav__separator m-nav__separator--fit"></li>
                         <li class="m-nav__item">
-                            <a href="{% url 'auth_logout' %}"
+                            <a href="{% url 'authentication:logout' %}"
                                class="btn m-btn--pill    btn-secondary m-btn m-btn--custom m-btn--label-brand m-btn--bolder">
                                 Logout
                             </a>
