--- a/templates/emails/generate_password.html
+++ b/templates/emails/generate_password.html
@@ -22,8 +22,8 @@
                             <div style="color:#555555;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;line-height:120%;padding-top:10px;padding-right:30px;padding-bottom:0px;padding-left:30px;">
                                 <div style="font-size: 12px; line-height: 14px; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; color: #555555;">
                                     <p style="font-size: 14px; line-height: 16px; margin: 0;"><strong><span
-                                            style="font-size: 46px; line-height: 55px;">Welcome to <span
-                                            style="color: #3d3bee; line-height: 55px; font-size: 46px;">{{ app_name }}</span>!</span></strong>
+                                            style="font-size: 46px; line-height: 55px;">Hi <span
+                                            style="color: #3d3bee; line-height: 55px; font-size: 46px;">{{ created_user.first_name }}</span>!</span></strong>
                                     </p>
                                 </div>
                             </div>
@@ -32,12 +32,12 @@
                                     <![endif]-->
                             <div style="color:#555555;font-family:'Open Sans', Helvetica, Arial, sans-serif;line-height:150%;padding-top:15px;padding-right:30px;padding-bottom:5px;padding-left:30px;">
                                 <div style="font-size: 12px; line-height: 18px; color: #555555; font-family: 'Open Sans', Helvetica, Arial, sans-serif;">
-                                    <p style="font-size: 12px; line-height: 18px; margin: 0;"><strong><span
-                                            style="font-size: 20px; line-height: 30px;">
-                                                {% blocktrans with first_name=created_user.first_name last_name=created_user.last_name %}
-                                                    Hi {{ first_name }} {{ last_name }}
-                                                {% endblocktrans %}
-                                            </span></strong>
+                                    <p style="font-size: 12px; line-height: 18px; margin: 0;">
+                                        <strong>
+                                            <span style="font-size: 20px; line-height: 30px;">
+                                                {% trans 'Your password was been generated successfull!' %}
+                                            </span>
+                                        </strong>
                                     </p>
                                 </div>
                             </div>
@@ -49,7 +49,7 @@
                                     <p style="font-size: 12px; line-height: 24px; margin: 0;"><span
                                             style="font-size: 16px;">
                                                 {% blocktrans with domain=site.domain %}
-                                                    One account was create for you in {{ domain }}.
+                                                    your passwordwas been generated successfull in {{ domain }}.
                                                 {% endblocktrans %}
 
                                             </span>
