--- a/templates/user/generate_password.html
+++ b/templates/user/generate_password.html
@@ -153,7 +153,7 @@
                 <!--begin: Form Body -->
                 <div class="m-portlet__body">
 
-                    {% include "partials/form.html"  with form_id="createUserForm" %}
+                    {% include "partials/form.html"  with form_id="generatePasswordForm" %}
 
                 </div>
             </div>
@@ -167,7 +167,7 @@
 
     <script type="text/javascript">
         (() => {
-            (new EventsToFormWithProcess("form#createUserForm")).init();
+            (new EventsToFormWithProcess("form#generatePasswordForm")).init();
         })();
     </script>
 {% endblock script_page_snippets %}
