--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -5,21 +5,22 @@
          m-menu-vertical="1" m-menu-scrollable="1" m-menu-dropdown-timeout="500" style="position: relative;">
         <ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
             {% for item in menu %}
-                <li class="{% if item.type in 'item,submenu' %}m-menu__item{% endif %} {% if item.type in 'section' %}m-menu__section{% endif %} {% if item.type in 'item' and item.active %}m-menu__item--active{% endif %}  {% if item.type in 'submenu' %}m-menu__item--submenu{% endif %} {% if item.type in 'submenu' and item.open %}m-menu__item--open m-menu__item--expanded{% endif %}"
-                    {% if item.type in 'submenu' %}aria-haspopup="true" m-menu-submenu-toggle="hover"{% endif %}>
+                {% if item.visible %}
+                    <li class="{% if item.type in 'item,submenu' %}m-menu__item{% endif %} {% if item.type in 'section' %}m-menu__section{% endif %} {% if item.type in 'item' and item.active %}m-menu__item--active{% endif %}  {% if item.type in 'submenu' %}m-menu__item--submenu{% endif %} {% if item.type in 'submenu' and item.open %}m-menu__item--open m-menu__item--expanded{% endif %}"
+                        {% if item.type in 'submenu' %}aria-haspopup="true" m-menu-submenu-toggle="hover"{% endif %}>
 
-                    {% if item.type in 'item,submenu' %}
-                        <a href="{% if item.url %}{% url item.url %}{% else %}javascript:;{% endif %}"
-                           class="m-menu__link {% if item.type in 'submenu' %}m-menu__toggle{% endif %}">
-                            {% if item.icon %}
-                                <i class="m-menu__link-icon {{ item.icon }}"></i>
-                            {% endif %}
+                        {% if item.type in 'item,submenu' %}
+                            <a href="{% if item.url %}{% url item.url %}{% else %}javascript:;{% endif %}"
+                               class="m-menu__link {% if item.type in 'submenu' %}m-menu__toggle{% endif %}">
+                                {% if item.icon %}
+                                    <i class="m-menu__link-icon {{ item.icon }}"></i>
+                                {% endif %}
 
-                            {% if item.type in 'submenu' %}
-                                <span class="m-menu__link-text">{{ item.text }}</span>
-                                <i class="m-menu__ver-arrow la la-angle-right"></i>
-                            {% else %}
-                                <span class="m-menu__link-title">
+                                {% if item.type in 'submenu' %}
+                                    <span class="m-menu__link-text">{{ item.text }}</span>
+                                    <i class="m-menu__ver-arrow la la-angle-right"></i>
+                                {% else %}
+                                    <span class="m-menu__link-title">
                                     <span class="m-menu__link-wrap">
                                         <span class="m-menu__link-text">
                                             {{ item.text }}
@@ -33,64 +34,73 @@
                                         {% endif %}
                                     </span>
                                 </span>
-                            {% endif %}
+                                {% endif %}
 
-                        </a>
-                        {% if item.type in 'submenu' %}
-                            <div class="m-menu__submenu ">
-                                <span class="m-menu__arrow"></span>
-                                <ul class="m-menu__subnav">
-                                    {% for sub_item in item.sub_menu %}
-                                        <li class="m-menu__item {% if sub_item.type in 'parent' %}m-menu__item--parent{% endif %} {% if sub_item.type in 'submenu' %}m-menu__item--submenu{% endif %}"
-                                            aria-haspopup="true">
-                                            {% if sub_item.type in 'parent' %}
-                                                <span class="m-menu__link">
+                            </a>
+                            {% if item.type in 'submenu' %}
+                                <div class="m-menu__submenu ">
+                                    <span class="m-menu__arrow"></span>
+                                    <ul class="m-menu__subnav">
+                                        {% for sub_item in item.sub_menu %}
+                                            {% if sub_item.visible %}
+                                                <li class="m-menu__item {% if sub_item.type in 'parent' %}m-menu__item--parent{% endif %} {% if sub_item.type in 'submenu' %}m-menu__item--submenu{% endif %}"
+                                                    aria-haspopup="true">
+                                                    {% if sub_item.type in 'parent' %}
+                                                        <span class="m-menu__link">
                                                     <span class="m-menu__link-text">
                                                         {{ sub_item.text }}
                                                     </span>
                                                 </span>
-                                            {% else %}
-                                                <a href="{% if sub_item.url %}{% url sub_item.url %}{% else %}javascript:;{% endif %}" class="m-menu__link {% if sub_item.type in 'submenu' %}m-menu__toggle{% endif %}">
-                                                    <i class="m-menu__link-bullet m-menu__link-bullet--dot">
-                                                        <span></span>
-                                                    </i>
-                                                    <span class="m-menu__link-text">{{ sub_item.text }}</span>
+                                                    {% else %}
+                                                        <a href="
 
-                                                    {% if sub_item.type in 'submenu' %}
-                                                        <i class="m-menu__ver-arrow la la-angle-right"></i>
+                                                                {% if sub_item.url %}{% url sub_item.url %}{% else %}javascript:;{% endif %}"
+                                                           class="m-menu__link {% if sub_item.type in 'submenu' %}m-menu__toggle{% endif %}">
+                                                            <i class="m-menu__link-bullet m-menu__link-bullet--dot">
+                                                                <span></span>
+                                                            </i>
+                                                            <span class="m-menu__link-text">{{ sub_item.text }}</span>
+
+                                                            {% if sub_item.type in 'submenu' %}
+                                                                <i class="m-menu__ver-arrow la la-angle-right"></i>
+                                                            {% endif %}
+                                                        </a>
+                                                        {% if sub_item.type in 'submenu' %}
+                                                            <div class="m-menu__submenu ">
+                                                                <span class="m-menu__arrow"></span>
+                                                                <ul class="m-menu__subnav">
+                                                                    {% for sub_menu_item in sub_item.sub_menu %}
+                                                                        {% if sub_menu_item.visible %}
+                                                                            <li class="m-menu__item "
+                                                                                aria-haspopup="true">
+                                                                                <a href="{% url sub_menu_item.url %}"
+                                                                                   class="m-menu__link ">
+                                                                                    <i class="m-menu__link-bullet m-menu__link-bullet--dot">
+                                                                                        <span></span>
+                                                                                    </i>
+                                                                                    <span class="m-menu__link-text">{{ sub_menu_item.text }}</span>
+                                                                                </a>
+                                                                            </li>
+                                                                        {% endif %}
+                                                                    {% endfor %}
+                                                                </ul>
+                                                            </div>
+                                                        {% endif %}
                                                     {% endif %}
-                                                </a>
-                                                {% if sub_item.type in 'submenu' %}
-                                                    <div class="m-menu__submenu ">
-                                                        <span class="m-menu__arrow"></span>
-                                                        <ul class="m-menu__subnav">
-                                                            {% for sub_menu_item in sub_item.sub_menu %}
-                                                                <li class="m-menu__item " aria-haspopup="true">
-                                                                    <a href="{% url sub_menu_item.url %}"
-                                                                       class="m-menu__link ">
-                                                                        <i class="m-menu__link-bullet m-menu__link-bullet--dot">
-                                                                            <span></span>
-                                                                        </i>
-                                                                        <span class="m-menu__link-text">{{ sub_menu_item.text }}</span>
-                                                                    </a>
-                                                                </li>
-                                                            {% endfor %}
-                                                        </ul>
-                                                    </div>
-                                                {% endif %}
+                                                </li>
                                             {% endif %}
-                                        </li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            {% endif %}
+                        {% else %}
+                            <h4 class="m-menu__section-text">
+                                {{ item.text }}
+                            </h4>
+                            <i class="m-menu__section-icon flaticon-more-v3"></i>
                         {% endif %}
-                    {% else %}
-                        <h4 class="m-menu__section-text">
-                            {{ item.text }}
-                        </h4>
-                        <i class="m-menu__section-icon flaticon-more-v3"></i>
-                    {% endif %}
-                </li>
+                    </li>
+                {% endif %}
             {% endfor %}
         </ul>
     </div>
