--- a/templates/partials/profile_menu.html
+++ b/templates/partials/profile_menu.html
@@ -109,8 +109,7 @@
                                 <a href="{% url 'admin:index' %}" class="m-nav__link">
                                     <i class="m-nav__link-icon flaticon-profile"></i>
                                     <span class="m-nav__link-text">
-																											{% trans 'Admin' %}
-																										</span>
+                                        {% trans 'Admin' %}</span>
                                 </a>
                             </li>
 
