--- a/templates/company/create.html
+++ b/templates/company/create.html
@@ -76,7 +76,7 @@
     <div class="row">
         <div class="col-lg-12">
             <!--begin::Portlet-->
-            <div class="m-portlet m-portlet--last m-portlet--head-lg m-portlet--responsive-mobile" id="main_portlet">
+            <div class="m-portlet m-portlet--last m-portlet--head-lg m-portlet--responsive-mobile">
                 <div class="m-portlet__head">
                     <div class="m-portlet__head-progress">
                         <!-- here can place a progress bar-->
